fix: add border to category for improved visibility

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -38,11 +38,12 @@
     font-size: 1.5rem;
 }
 
-.category{
+.category {
     grid-area: category;
     align-self: start;
     justify-self: end;
     text-align: right;
+    border: solid red 5px ;
 }
 
 p.logo, p.category{
